updated vscode launch.json and tasks.json to support directories

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
         {
             "name": "cortex-debug",
             "cwd": "${workspaceRoot}",
-            "executable": "${folder}/main.elf",
+            "executable": "${relativeFileDirname}/main.elf",
             "request": "launch",
             "type": "cortex-debug",
             "servertype": "openocd",
