--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "make",
             "type": "shell",
-            "command": "make",
+            "command": "make -C ${relativeFileDirname}",
             "problemMatcher": [],
             "group": {
                 "kind": "build",
